"Book" button on nav now has call to action functionality.
It has a class of .cta to begin with, which makes it green. A class of .clear is added when .active is added to the "4K" button.

--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -134,18 +134,28 @@ li a:active {
 }
 
 /* line 92, ../sass/screen.scss */
+.cta {
+  background: #00CC99;
+}
+
+/* line 96, ../sass/screen.scss */
+.clear {
+  background: transparent;
+}
+
+/* line 100, ../sass/screen.scss */
 .black {
   color: black;
 }
 
-/* line 97, ../sass/screen.scss */
+/* line 105, ../sass/screen.scss */
 section {
   position: relative;
   height: 100%;
   overflow: hidden;
 }
 
-/* line 103, ../sass/screen.scss */
+/* line 111, ../sass/screen.scss */
 h1 {
   position: absolute;
   bottom: 0.25em;
@@ -154,12 +164,12 @@ h1 {
   font-size: 10em;
 }
 
-/* line 112, ../sass/screen.scss */
+/* line 120, ../sass/screen.scss */
 a {
   text-decoration: none;
 }
 
-/* line 116, ../sass/screen.scss */
+/* line 124, ../sass/screen.scss */
 #logo {
   margin-top: 5px;
   float: left;
@@ -167,7 +177,7 @@ a {
   font-size: 40px;
 }
 
-/* line 125, ../sass/screen.scss */
+/* line 133, ../sass/screen.scss */
 .ruler {
   position: absolute;
   height: 100%;
@@ -177,34 +187,34 @@ a {
   opacity: 0.5;
 }
 
-/* line 135, ../sass/screen.scss */
+/* line 143, ../sass/screen.scss */
 #center {
   left: 50%;
 }
 
-/* line 139, ../sass/screen.scss */
+/* line 147, ../sass/screen.scss */
 #left {
   left: 10%;
 }
 
-/* line 143, ../sass/screen.scss */
+/* line 151, ../sass/screen.scss */
 #right {
   right: 10%;
 }
 
-/* line 147, ../sass/screen.scss */
+/* line 155, ../sass/screen.scss */
 #center-x {
   height: 1px;
   width: 100%;
   top: 50%;
 }
 
-/* line 154, ../sass/screen.scss */
+/* line 162, ../sass/screen.scss */
 #video {
   background-color: #00CC99;
   color: #009570;
 }
-/* line 158, ../sass/screen.scss */
+/* line 166, ../sass/screen.scss */
 #video #bgvid {
   position: absolute;
   top: -40%;
@@ -214,7 +224,7 @@ a {
   z-index: 100;
 }
 
-/* line 171, ../sass/screen.scss */
+/* line 179, ../sass/screen.scss */
 .button {
   position: absolute;
   top: 50%;
@@ -237,97 +247,97 @@ a {
   transition: 0.2s;
 }
 
-/* line 194, ../sass/screen.scss */
+/* line 202, ../sass/screen.scss */
 .button:link {
   text-decoration: none;
 }
 
-/* line 198, ../sass/screen.scss */
+/* line 206, ../sass/screen.scss */
 .button:hover {
   background-color: #FF6B6B;
   border-color: #FF6B6B;
   transition: 0.2s;
 }
 
-/* line 206, ../sass/screen.scss */
+/* line 214, ../sass/screen.scss */
 #package {
   background-color: #FFEE88;
   color: #D1C370;
 }
 
-/* line 211, ../sass/screen.scss */
+/* line 219, ../sass/screen.scss */
 #resolution {
   background-color: #EE92C2;
   color: #C3789F;
 }
 
-/* line 216, ../sass/screen.scss */
+/* line 224, ../sass/screen.scss */
 #stills {
   background-color: #6A7FDB;
   color: #5768B4;
 }
 
-/* line 221, ../sass/screen.scss */
+/* line 229, ../sass/screen.scss */
 #edit {
   background-color: #69D1C5;
   color: #4D9990;
 }
 
-/* line 226, ../sass/screen.scss */
+/* line 234, ../sass/screen.scss */
 #webpage {
   background-color: #FF6B6B;
   color: #BA4E4E;
 }
 
-/* line 231, ../sass/screen.scss */
+/* line 239, ../sass/screen.scss */
 #book {
   background-color: #8DE4FF;
   color: #67A6BA;
 }
 
-/* line 236, ../sass/screen.scss */
+/* line 244, ../sass/screen.scss */
 .active {
   background: white;
   color: black;
 }
 
-/* line 241, ../sass/screen.scss */
+/* line 249, ../sass/screen.scss */
 .active:hover {
   background: white;
   color: black;
 }
 
-/* line 246, ../sass/screen.scss */
+/* line 254, ../sass/screen.scss */
 .blacktive {
   background: black;
   color: white;
 }
 
-/* line 251, ../sass/screen.scss */
+/* line 259, ../sass/screen.scss */
 .blacktive:hover {
   background: black;
   color: white;
 }
 
-/* line 256, ../sass/screen.scss */
+/* line 264, ../sass/screen.scss */
 .win {
   background: black;
   color: white;
 }
 
-/* line 261, ../sass/screen.scss */
+/* line 269, ../sass/screen.scss */
 .win:hover {
   background: black;
   color: white;
 }
 
-/* line 266, ../sass/screen.scss */
+/* line 274, ../sass/screen.scss */
 .dark:hover {
   background: black;
   color: white;
 }
 
-/* line 271, ../sass/screen.scss */
+/* line 279, ../sass/screen.scss */
 .dark:active {
   background: white;
 }
