Changed color of "Book Now" button in the middle of the screen.

--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -204,8 +204,8 @@ a {
 }
 
 .button:hover {
-	background-color: $red;
-	border-color: $red;
+	background-color: $green;
+	border-color: $green;
 	transition: 0.2s;
 
 }
