--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -254,8 +254,8 @@ a {
 
 /* line 206, ../sass/screen.scss */
 .button:hover {
-  background-color: #FF6B6B;
-  border-color: #FF6B6B;
+  background-color: #00CC99;
+  border-color: #00CC99;
   transition: 0.2s;
 }
 
