--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -85,6 +85,7 @@ li {
 
 	a:active{
 		background: black;
+		color: white;
 	}
 
 }
@@ -270,4 +271,5 @@ a {
 
 .dark:active {
 	background: white;
+	color: black;
 }
