--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -203,6 +203,14 @@ a {
 
 }
 
+#bar {
+	position: absolute;
+	width: 100%;
+	height: 50px;
+	bottom: 0;
+	background: white;
+	z-index: 10000;
+}
 
 #package {
 	background-color: $yellow;
@@ -210,7 +218,7 @@ a {
 }
 
 #resolution {
-	background-color: $pink;
+	background-color: white;
 	color: $dark-pink;
 }
 
