--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -161,19 +161,11 @@ a {
 }
 
 /* line 117, ../sass/screen.scss */
-#logo {
-  margin-top: 5px;
-  float: left;
-  color: white;
-  font-size: 40px;
-}
-
-/* line 126, ../sass/screen.scss */
 .murder {
   color: black;
 }
 
-/* line 130, ../sass/screen.scss */
+/* line 121, ../sass/screen.scss */
 .ruler {
   position: absolute;
   height: 100%;
@@ -183,34 +175,34 @@ a {
   opacity: 0.5;
 }
 
-/* line 140, ../sass/screen.scss */
+/* line 131, ../sass/screen.scss */
 #center {
   left: 50%;
 }
 
-/* line 144, ../sass/screen.scss */
+/* line 135, ../sass/screen.scss */
 #left {
   left: 10%;
 }
 
-/* line 148, ../sass/screen.scss */
+/* line 139, ../sass/screen.scss */
 #right {
   right: 10%;
 }
 
-/* line 152, ../sass/screen.scss */
+/* line 143, ../sass/screen.scss */
 #center-x {
   height: 1px;
   width: 100%;
   top: 50%;
 }
 
-/* line 159, ../sass/screen.scss */
+/* line 150, ../sass/screen.scss */
 #video {
   background-color: #00CC99;
   color: #009570;
 }
-/* line 163, ../sass/screen.scss */
+/* line 154, ../sass/screen.scss */
 #video #bgvid {
   position: absolute;
   top: -40%;
@@ -220,7 +212,7 @@ a {
   z-index: 100;
 }
 
-/* line 176, ../sass/screen.scss */
+/* line 167, ../sass/screen.scss */
 .button {
   position: absolute;
   top: 50%;
@@ -243,19 +235,19 @@ a {
   transition: 0.2s;
 }
 
-/* line 199, ../sass/screen.scss */
+/* line 190, ../sass/screen.scss */
 .button:link {
   text-decoration: none;
 }
 
-/* line 203, ../sass/screen.scss */
+/* line 194, ../sass/screen.scss */
 .button:hover {
   background-color: #00CC99;
   border-color: #00CC99;
   transition: 0.2s;
 }
 
-/* line 210, ../sass/screen.scss */
+/* line 201, ../sass/screen.scss */
 #bar {
   position: absolute;
   width: 100%;
@@ -265,86 +257,99 @@ a {
   z-index: 2000;
 }
 
-/* line 219, ../sass/screen.scss */
+/* line 210, ../sass/screen.scss */
 #package {
   background-color: #FFEE88;
   color: #D1C370;
 }
 
-/* line 224, ../sass/screen.scss */
+/* line 215, ../sass/screen.scss */
 #resolution {
   background-color: white;
   color: #C3789F;
 }
 
-/* line 229, ../sass/screen.scss */
+/* line 220, ../sass/screen.scss */
 #stills {
   background-color: #6A7FDB;
   color: #5768B4;
 }
 
-/* line 234, ../sass/screen.scss */
+/* line 225, ../sass/screen.scss */
 #edit {
   background-color: #69D1C5;
   color: #4D9990;
 }
 
-/* line 239, ../sass/screen.scss */
+/* line 230, ../sass/screen.scss */
 #webpage {
   background-color: #FF6B6B;
   color: #BA4E4E;
 }
 
-/* line 244, ../sass/screen.scss */
+/* line 235, ../sass/screen.scss */
 #book {
   background-color: #8DE4FF;
   color: #67A6BA;
 }
 
-/* line 249, ../sass/screen.scss */
+/* line 240, ../sass/screen.scss */
 .active {
   background: white;
   color: black;
 }
 
-/* line 254, ../sass/screen.scss */
+/* line 245, ../sass/screen.scss */
 .active:hover {
   background: white;
   color: black;
 }
 
-/* line 259, ../sass/screen.scss */
+/* line 250, ../sass/screen.scss */
 .blacktive {
   background: black;
   color: white;
 }
 
-/* line 264, ../sass/screen.scss */
+/* line 255, ../sass/screen.scss */
 .blacktive:hover {
   background: black;
   color: white;
 }
 
-/* line 269, ../sass/screen.scss */
+/* line 260, ../sass/screen.scss */
 .win {
   background: black;
   color: white;
 }
 
-/* line 274, ../sass/screen.scss */
+/* line 265, ../sass/screen.scss */
 .win:hover {
   background: black;
   color: white;
 }
 
-/* line 279, ../sass/screen.scss */
+/* line 270, ../sass/screen.scss */
 .dark:hover {
   background: black;
   color: white;
 }
 
-/* line 284, ../sass/screen.scss */
+/* line 275, ../sass/screen.scss */
 .dark:active {
   background: white;
   color: black;
+}
+
+/* line 280, ../sass/screen.scss */
+.heart {
+  fill: white;
+  width: 40px;
+  height: 10px;
+}
+
+/* line 286, ../sass/screen.scss */
+#logo {
+  width: 40px;
+  margin-top: 5px;
 }
