--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -264,13 +264,15 @@ a {
 }
 
 .dark:hover {
-	background: black;
-	color: white;
+	// background: black;
+	// color: white;
+	box-shadow: inset 0 0 0 2px black;
+	background: transparent;
 }
 
 .dark:active {
-	background: white;
-	color: black;
+	background: black;
+	color: white;
 }
 
 .heart {
@@ -288,4 +290,8 @@ a {
 .murder {
 	fill: black;
 	transition: 0.2s;
+}
+
+.blacktive:hover {
+	background: black;
 }
