--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -326,17 +326,17 @@ a {
 
 /* line 266, ../sass/screen.scss */
 .dark:hover {
+  box-shadow: inset 0 0 0 2px black;
+  background: transparent;
+}
+
+/* line 273, ../sass/screen.scss */
+.dark:active {
   background: black;
   color: white;
 }
 
-/* line 271, ../sass/screen.scss */
-.dark:active {
-  background: white;
-  color: black;
-}
-
-/* line 276, ../sass/screen.scss */
+/* line 278, ../sass/screen.scss */
 .heart {
   fill: white;
   width: 40px;
@@ -344,14 +344,19 @@ a {
   transition: 0.2s;
 }
 
-/* line 283, ../sass/screen.scss */
+/* line 285, ../sass/screen.scss */
 #logo {
   width: 40px;
   margin-top: 5px;
 }
 
-/* line 288, ../sass/screen.scss */
+/* line 290, ../sass/screen.scss */
 .murder {
   fill: black;
   transition: 0.2s;
+}
+
+/* line 295, ../sass/screen.scss */
+.blacktive:hover {
+  background: black;
 }
