Fixed this weird gap due to the offsets where no nav menu item was lit up.

--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -398,3 +398,9 @@ a {
 .black_active:hover {
   background: black;
 }
+
+/* line 332, ../sass/screen.scss */
+.gap {
+  background: black;
+  color: white;
+}
