Added a class and an id to the arrow.

--- a/style/stylesheets/screen.css
+++ b/style/stylesheets/screen.css
@@ -392,3 +392,14 @@ a {
   background: black;
   color: white;
 }
+
+/* line 325, ../sass/screen.scss */
+.arrow {
+  position: relative;
+  fill: blue;
+}
+
+/* line 330, ../sass/screen.scss */
+#liney {
+  height: 30px;
+}
