Changed some styling on the arrow.

--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -324,9 +324,10 @@ a {
 
 .arrow {
 	position: relative;
-	fill: blue;	
+	fill: black;	
 }
 
 #liney {
-	height: 30px;
+	margin-top: 15px;
+	height: 20px;
 }
