--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -153,12 +153,21 @@ a {
 		position: absolute;
 		top: -40%;
 		width: 100%;
-		height: 100%;
+		height: 50%;
 		// object-fit does not work on IE.
     	object-fit: cover;
     	// display: none;
     	z-index: 100;
 	}
+}
+
+#vimeo {
+	position: absolute;
+	width: 100vw;
+	height: 56.25vw;
+	min-height: 100vh;
+	min-width: 177.77vh;
+	z-index: 100;
 }
 
 			
