--- a/style/sass/screen.scss
+++ b/style/sass/screen.scss
@@ -144,7 +144,6 @@ a {
 	top: 50%;
 }
 
-
 #video {
 	background-color: $green;
 	color: $dark-green;
@@ -156,7 +155,7 @@ a {
 		height: 100%;
 		// object-fit does not work on IE.
     	object-fit: cover;
-    	// display: none;
+    	display: none;
     	z-index: 100;
 	}
 }
